--- a/src/main/resources/FXML/DashBoard.fxml
+++ b/src/main/resources/FXML/DashBoard.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -17,11 +18,7 @@
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.shape.Rectangle?>
 
-<BorderPane prefHeight="800.0"
-            prefWidth="1400.0"
-            stylesheets="@../CSS/dashboard.css"
-            xmlns="http://javafx.com/javafx/24.0.1"
-            xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane prefHeight="800.0" prefWidth="1400.0" style="-fx-background-color: D9D9D9;" stylesheets="@../CSS/dashboard.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1">
 
     <!-- Sidebar -->
     <left>
@@ -84,14 +81,18 @@
                             <Label layoutX="80.0" prefHeight="35.0" prefWidth="187.0" styleClass="subtitle" text="🔔 Thông Báo" />
                         </children>
                     </AnchorPane>
-                    <AnchorPane prefHeight="207.0" prefWidth="315.0" styleClass="borderNotice">
-                        <children>
-                            <VBox alignment="CENTER" layoutX="42.0" layoutY="18.0" spacing="6">
+               <ScrollPane prefHeight="200.0" prefWidth="343.0" styleClass="scroll-bar">
+                  <content>
+                            <VBox alignment="CENTER" prefHeight="216.0" prefWidth="329.0" spacing="6" styleClass="box_not">
                                 <Label styleClass="alert-red" text="HD12082025001 - Đã quá giờ hẹn" />
                                 <Label styleClass="alert-green" text="HD12082025007 - Đã đến giờ hẹn" />
+                        <Label layoutX="63.0" layoutY="75.0" styleClass="alert-red" text="HD12082025001 - Đã quá giờ hẹn" />
+                        <Label layoutX="63.0" layoutY="131.0" styleClass="alert-red" text="HD12082025001 - Đã quá giờ hẹn" />
+                        <Label layoutX="63.0" layoutY="149.0" styleClass="alert-red" text="HD12082025001 - Đã quá giờ hẹn" />
+                        <Label layoutX="63.0" layoutY="168.0" styleClass="alert-red" text="HD12082025001 - Đã quá giờ hẹn" />
                             </VBox>
-                        </children>
-                    </AnchorPane>
+                  </content>
+               </ScrollPane>
                 </VBox>
 
             </HBox>
