--- a/src/main/resources/CSS/ChonMon.css
+++ b/src/main/resources/CSS/ChonMon.css
@@ -24,6 +24,8 @@
 .search-field {
     -fx-background-radius: 20 20 28 28;
     -fx-padding: 20 20 28 28;
+    -fx-border-color: #E6763E;
+    -fx-border-radius: 20 20 28 28;
     -fx-background-color: white;
 }
 
@@ -225,7 +227,7 @@
 }
 
 .info-label {
-    -fx-font-size: 14px;
+    -fx-font-size: 13px;
     -fx-font-weight: bold;
     -fx-text-fill: #2c3e50;
     -fx-pref-width: 110px;
@@ -478,3 +480,22 @@
     -fx-effect: dropshadow(gaussian, rgba(210,166,121,0.3), 4,0,0,1);
 }
 
+.btn-back {
+    -fx-background-radius: 22;
+    -fx-border-radius: 22;
+    -fx-font-weight: bold;
+    -fx-font-size: 13px;
+    -fx-wrap-text: true;
+    -fx-text-alignment: center;
+    -fx-cursor: hand;
+    -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.2), 4, 0, 0, 2);
+    -fx-alignment: center;
+    -fx-background-color: green;
+    -fx-text-fill: white;
+}
+
+.btn-back:hover {
+    -fx-background-color: white;
+    -fx-border-color: green;
+    -fx-text-fill: green;
+}
