--- a/src/main/resources/FXML/ChonMon.fxml
+++ b/src/main/resources/FXML/ChonMon.fxml
@@ -31,7 +31,8 @@
             </padding>
          <VBox prefHeight="780.0" prefWidth="660.0" styleClass="center-p">
             <children>
-                  <HBox alignment="CENTER" prefHeight="56.0" prefWidth="660.0" spacing="10">
+                  <HBox alignment="CENTER" prefHeight="56.0" prefWidth="660.0" spacing="10" style="-fx-background-color: white; -fx-background-radius: 20 20 28 28;">
+                  <Button mnemonicParsing="false" prefHeight="67.0" prefWidth="73.0" styleClass="btn-back" text="Chọn Bàn" />
                       <TextField layoutX="14.0" layoutY="7.0" prefHeight="63.0" prefWidth="577.0" promptText="Tìm món ăn..." styleClass="search-field" HBox.hgrow="ALWAYS" />
                   </HBox>
                   <!-- Scroll menu -->
@@ -174,6 +175,12 @@
                     <Label styleClass="info-label" text="SĐT:" />
                     <TextField prefHeight="24.0" prefWidth="228.0" promptText="Nhập số điện thoại" styleClass="filter-tf" />
                 </HBox>
+            <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="55.0" spacing="10">
+               <children>
+                  <Label styleClass="info-label" text="Bàn:" />
+                  <TextField prefHeight="24.0" prefWidth="228.0" promptText="Bàn" styleClass="filter-tf" />
+               </children>
+            </HBox>
                 <HBox alignment="CENTER_LEFT" spacing="10">
                     <Label styleClass="info-label" text="Số lượng khách:" />
                     <TextField prefHeight="24.0" prefWidth="228.0" promptText="Số người" styleClass="filter-tf" />
