--- a/src/main/resources/CSS/QLDatBan.css
+++ b/src/main/resources/CSS/QLDatBan.css
@@ -232,7 +232,7 @@
     -fx-background-color: #888;
 }
 
-/* Bảng đơn hàng */
+/* Bảng chi tiet */
 .order-section {
     -fx-background-color: white;
     -fx-background-radius: 15;
