--- a/src/main/resources/FXML/DatBan.fxml
+++ b/src/main/resources/FXML/DatBan.fxml
@@ -217,52 +217,8 @@
                                  <Label prefHeight="54.0" prefWidth="63.0" text="VIP" />
                               </children>
                            </VBox>
-                           <VBox layoutX="20.0" layoutY="20.0" prefHeight="200.0" prefWidth="100.0" styleClass="table_items">
-                              <children>
-                                 <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
-                                    <image>
-                                       <Image url="@../IMG/ban/out.png" />
-                                    </image>
-                                 </ImageView>
-                                 <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
-                                    <image>
-                                       <Image url="@../IMG/icon/star.png" />
-                                    </image>
-                                 </ImageView>
-                                 <Label text="2-3" />
-                              </children>
-                           </VBox>
-                           <VBox layoutX="340.0" layoutY="20.0" prefHeight="200.0" prefWidth="100.0" styleClass="table_items">
-                              <children>
-                                 <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
-                                    <image>
-                                       <Image url="@../IMG/ban/out.png" />
-                                    </image>
-                                 </ImageView>
-                                 <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
-                                    <image>
-                                       <Image url="@../IMG/icon/star.png" />
-                                    </image>
-                                 </ImageView>
-                                 <Label text="3-4" />
-                              </children>
-                           </VBox>
+                           <AnchorPane layoutX="400.0" layoutY="20.0" prefHeight="184.0" prefWidth="100.0" />
                            <VBox layoutX="400.0" layoutY="20.0" prefHeight="200.0" prefWidth="100.0" styleClass="table_items">
-                              <children>
-                                 <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
-                                    <image>
-                                       <Image url="@../IMG/ban/out.png" />
-                                    </image>
-                                 </ImageView>
-                                 <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
-                                    <image>
-                                       <Image url="@../IMG/icon/star.png" />
-                                    </image>
-                                 </ImageView>
-                                 <Label text="5-8" />
-                              </children>
-                           </VBox>
-                           <VBox layoutX="460.0" layoutY="20.0" prefHeight="200.0" prefWidth="100.0" styleClass="table_items">
                               <children>
                                  <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
@@ -277,6 +233,22 @@
                                  <Label text="8-12" />
                               </children>
                            </VBox>
+                           <VBox layoutX="400.0" layoutY="20.0" prefHeight="200.0" prefWidth="100.0" styleClass="table_items">
+                              <children>
+                                 <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
+                                    <image>
+                                       <Image url="@../IMG/ban/out.png" />
+                                    </image>
+                                 </ImageView>
+                                 <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                                    <image>
+                                       <Image url="@../IMG/icon/star.png" />
+                                    </image>
+                                 </ImageView>
+                                 <Label text="> 12" />
+                              </children>
+                           </VBox>
+                           <AnchorPane layoutX="220.0" layoutY="20.0" prefHeight="184.0" prefWidth="100.0" />
                         </children>
                      </HBox>
                   </children>
