--- a/src/main/resources/FXML/sidebar_QL.fxml
+++ b/src/main/resources/FXML/sidebar_QL.fxml
@@ -12,7 +12,7 @@
 
 <BorderPane prefWidth="322.0"
             styleClass="sidebar"
-            stylesheets="@../CSS/sidebar_QL.css"
+            stylesheets="@../CSS/sidebar.css"
             xmlns="http://javafx.com/javafx/24.0.1"
             xmlns:fx="http://javafx.com/fxml/1">
 
