--- a/src/main/resources/FXML/ThongKe.fxml
+++ b/src/main/resources/FXML/ThongKe.fxml
@@ -13,6 +13,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -21,7 +22,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane prefHeight="900.0" prefWidth="1400.0" stylesheets="@../CSS/thongke.css" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" style="-fx-background-color: #D9D9D9;">
+<BorderPane prefHeight="900.0" prefWidth="1400.0" style="-fx-background-color: #D9D9D9;" stylesheets="@../CSS/thongke.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1">
 
     <!-- SIDEBAR -->
     <left>
@@ -109,7 +110,7 @@
                                     </VBox>
                                                 <HBox alignment="CENTER" style="-fx-background-color: #4CAF50; -fx-background-radius: 0 8 8 0;" styleClass="dish-inc">
                                                     <children>
-                                                        <Label text="↑10%" />
+                                                        <Label styleClass="dish-row-label" text="↑10%" />
                                                     </children>
                                                 </HBox>
                                             </HBox>
@@ -307,13 +308,21 @@
                                         <VBox alignment="TOP_CENTER" styleClass="info-box">
                                             <children>
                                                 <Label text="DOANH THU" />
-                                                <Label styleClass="money-label" text="15.500.000 VND" />
+                                    <AnchorPane prefHeight="132.0" prefWidth="150.0">
+                                       <children>
+                                                      <Label layoutX="14.0" layoutY="54.0" styleClass="money-label" text="15.500.000 VND" />
+                                       </children>
+                                    </AnchorPane>
                                             </children>
                                         </VBox>
-                                        <Region styleClass="spacer" HBox.hgrow="ALWAYS" />
                                         <VBox alignment="TOP_CENTER" styleClass="info-box">
                                             <children>
                                                 <Label text="TỔNG HÓA ĐƠN" />
+                                    <AnchorPane prefHeight="132.0" prefWidth="150.0">
+                                       <children>
+                                          <Label layoutX="66.0" layoutY="54.0" styleClass="money-label" text="36" />
+                                       </children>
+                                    </AnchorPane>
                                             </children>
                                         </VBox>
                                     </children>
@@ -324,10 +333,13 @@
                                         <VBox alignment="TOP_CENTER" styleClass="info-box">
                                             <children>
                                                 <Label text="DOANH THU So Với Tháng Trước" textAlignment="CENTER" wrapText="true" />
-                                                <Label styleClass="money-label" text="2.500.000 VND" />
+                                    <AnchorPane prefHeight="119.0" prefWidth="150.0">
+                                       <children>
+                                                      <Label layoutX="19.0" layoutY="47.0" styleClass="money-label" text="2.500.000 VND" />
+                                       </children>
+                                    </AnchorPane>
                                             </children>
                                         </VBox>
-                                        <Region styleClass="spacer" HBox.hgrow="ALWAYS" />
                                         <VBox alignment="TOP_CENTER" styleClass="info-box">
                                             <children>
                                                 <Label text="KHU VỰC" />
