--- a/src/main/resources/FXML/DashBoard.fxml
+++ b/src/main/resources/FXML/DashBoard.fxml
@@ -18,12 +18,12 @@
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.shape.Rectangle?>
 
-<BorderPane prefHeight="800.0" prefWidth="1400.0" style="-fx-background-color: D9D9D9;" stylesheets="@../CSS/dashboard.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1">
-
-    <!-- Sidebar -->
-    <left>
-        <fx:include source="sidebar_NV.fxml" />
-    </left>
+<BorderPane prefHeight="800.0"
+            prefWidth="1400.0"
+            style="-fx-background-color: D9D9D9;"
+            stylesheets="@../CSS/dashboard.css"
+            xmlns="http://javafx.com/javafx/24.0.1"
+            xmlns:fx="http://javafx.com/fxml/1">
 
     <!-- Main Content -->
     <center>
