--- a/src/main/resources/FXML/QLDatBan.fxml
+++ b/src/main/resources/FXML/QLDatBan.fxml
@@ -23,13 +23,8 @@
 <!--<?import javafx.scene.control.*?>-->
 <!--<?import javafx.scene.layout.*?>-->
 
-<BorderPane prefHeight="800" prefWidth="1400" styleClass="root-pane" stylesheets="@../CSS/qldatban.css" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1">
-<!--    fx:controller="ui.controllers.QuanLiDatBanController"-->
+<BorderPane prefHeight="800" prefWidth="1400" styleClass="root-pane" stylesheets="@../CSS/qldatban.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1">
 
-    <!-- Sidebar bên trái -->
-    <left>
-        <fx:include source="sidebar_NV.fxml" />
-    </left>
 
     <!-- Nội dung chính ở giữa -->
     <center>
@@ -44,7 +39,118 @@
                     </HBox>
 
                     <!-- Danh sách hóa đơn -->
-                    <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="338.0" prefWidth="540.0" styleClass="invoice-scroll">
+                    <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="296.0" prefWidth="925.0" styleClass="invoice-scroll">
+                        <content>
+                            <VBox alignment="CENTER_LEFT" prefHeight="385.0" prefWidth="526.0" scaleShape="false" spacing="12" style="-fx-background-color: #EFEFEF; -fx-background-radius: 20 20 20 20;">
+                                <padding>
+                                    <Insets bottom="10" left="10" right="10" top="10" />
+                                </padding>
+
+                                <!-- Thẻ hóa đơn -->
+                                <HBox alignment="CENTER" spacing="15" styleClass="invoice-card">
+                                    <ImageView fitHeight="60" fitWidth="100" preserveRatio="true">
+                                        <image>
+                                            <Image url="@../IMG/ban1.png" />
+                                        </image>
+                                    </ImageView>
+                                    <VBox>
+                                        <Label styleClass="invoice-id" text="HD1210820250002" />
+                                        <AnchorPane prefHeight="10.0" prefWidth="200.0" />
+                                        <Label styleClass="invoice-phone" text="SĐT: 0398765432" />
+                                    </VBox>
+                                    <Region HBox.hgrow="ALWAYS" />
+                                </HBox>
+                                <HBox alignment="CENTER" spacing="15" styleClass="invoice-card">
+                                    <ImageView fitHeight="60" fitWidth="100" preserveRatio="true">
+                                        <image>
+                                            <Image url="@../IMG/ban1.png" />
+                                        </image>
+                                    </ImageView>
+                                    <VBox>
+                                        <Label styleClass="invoice-id" text="HD1210820250002" />
+                                        <AnchorPane prefHeight="10.0" prefWidth="200.0" />
+                                        <Label styleClass="invoice-phone" text="SĐT: 0398765432" />
+                                    </VBox>
+                                    <Region HBox.hgrow="ALWAYS" />
+                                </HBox>
+                                <HBox alignment="CENTER" spacing="15" styleClass="invoice-card">
+                                    <ImageView fitHeight="60" fitWidth="100" preserveRatio="true">
+                                        <image>
+                                            <Image url="@../IMG/ban1.png" />
+                                        </image>
+                                    </ImageView>
+                                    <VBox>
+                                        <Label styleClass="invoice-id" text="HD1210820250002" />
+                                        <AnchorPane prefHeight="10.0" prefWidth="200.0" />
+                                        <Label styleClass="invoice-phone" text="SĐT: 0398765432" />
+                                    </VBox>
+                                    <Region HBox.hgrow="ALWAYS" />
+                                </HBox>
+                                <HBox alignment="CENTER" spacing="15" styleClass="invoice-card">
+                                    <ImageView fitHeight="60" fitWidth="100" preserveRatio="true">
+                                        <image>
+                                            <Image url="@../IMG/ban1.png" />
+                                        </image>
+                                    </ImageView>
+                                    <VBox>
+                                        <Label styleClass="invoice-id" text="HD1210820250002" />
+                                        <AnchorPane prefHeight="10.0" prefWidth="200.0" />
+                                        <Label styleClass="invoice-phone" text="SĐT: 0398765432" />
+                                    </VBox>
+                                    <Region HBox.hgrow="ALWAYS" />
+                                </HBox>
+                                <HBox alignment="CENTER" spacing="15" styleClass="invoice-card">
+                                    <ImageView fitHeight="60" fitWidth="100" preserveRatio="true">
+                                        <image>
+                                            <Image url="@../IMG/ban1.png" />
+                                        </image>
+                                    </ImageView>
+                                    <VBox>
+                                        <Label styleClass="invoice-id" text="HD1210820250002" />
+                                        <AnchorPane prefHeight="10.0" prefWidth="200.0" />
+                                        <Label styleClass="invoice-phone" text="SĐT: 0398765432" />
+                                    </VBox>
+                                    <Region HBox.hgrow="ALWAYS" />
+                                </HBox>
+                                <HBox alignment="CENTER" spacing="15" styleClass="invoice-card">
+                                    <ImageView fitHeight="60" fitWidth="100" preserveRatio="true">
+                                        <image>
+                                            <Image url="@../IMG/ban1.png" />
+                                        </image>
+                                    </ImageView>
+                                    <VBox>
+                                        <Label styleClass="invoice-id" text="HD1210820250002" />
+                                        <AnchorPane prefHeight="10.0" prefWidth="200.0" />
+                                        <Label styleClass="invoice-phone" text="SĐT: 0398765432" />
+                                    </VBox>
+                                    <Region HBox.hgrow="ALWAYS" />
+                                </HBox>
+                                <HBox alignment="CENTER" spacing="15" styleClass="invoice-card">
+                                    <ImageView fitHeight="60" fitWidth="100" preserveRatio="true">
+                                        <image>
+                                            <Image url="@../IMG/ban1.png" />
+                                        </image>
+                                    </ImageView>
+                                    <VBox>
+                                        <Label styleClass="invoice-id" text="HD1210820250002" />
+                                        <AnchorPane prefHeight="10.0" prefWidth="200.0" />
+                                        <Label styleClass="invoice-phone" text="SĐT: 0398765432" />
+                                    </VBox>
+                                    <Region HBox.hgrow="ALWAYS" />
+                                </HBox>
+                            </VBox>
+                        </content>
+                    </ScrollPane>
+                </children>
+            </VBox>
+            <VBox prefHeight="380.0" prefWidth="653.0" styleClass="top">
+                <children>
+                    <HBox alignment="CENTER" prefHeight="55.0" prefWidth="540.0" spacing="10" styleClass="list-name">
+                        <Label>Danh sách bàn đã nhận</Label>
+                    </HBox>
+
+                    <!-- Danh sách hóa đơn -->
+                    <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="296.0" prefWidth="925.0" styleClass="invoice-scroll">
                         <content>
                             <VBox alignment="CENTER_LEFT" prefHeight="385.0" prefWidth="526.0" scaleShape="false" spacing="12" style="-fx-background-color: #EFEFEF; -fx-background-radius: 20 20 20 20;">
                                 <padding>
@@ -151,117 +257,6 @@
             <padding>
                 <Insets bottom="10" left="20" right="20" top="40" />
             </padding>
-            <VBox prefHeight="380.0" prefWidth="653.0" styleClass="top">
-                <children>
-                    <HBox alignment="CENTER" prefHeight="55.0" prefWidth="540.0" spacing="10" styleClass="list-name">
-                        <Label>Danh sách bàn đã nhận</Label>
-                    </HBox>
-
-                    <!-- Danh sách hóa đơn -->
-                    <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="338.0" prefWidth="540.0" styleClass="invoice-scroll">
-                        <content>
-                            <VBox alignment="CENTER_LEFT" prefHeight="385.0" prefWidth="526.0" scaleShape="false" spacing="12" style="-fx-background-color: #EFEFEF; -fx-background-radius: 20 20 20 20;">
-                                <padding>
-                                    <Insets bottom="10" left="10" right="10" top="10" />
-                                </padding>
-
-                                <!-- Thẻ hóa đơn -->
-                                <HBox alignment="CENTER" spacing="15" styleClass="invoice-card">
-                                    <ImageView fitHeight="60" fitWidth="100" preserveRatio="true">
-                                        <image>
-                                            <Image url="@../IMG/ban1.png" />
-                                        </image>
-                                    </ImageView>
-                                    <VBox>
-                                        <Label styleClass="invoice-id" text="HD1210820250002" />
-                                        <AnchorPane prefHeight="10.0" prefWidth="200.0" />
-                                        <Label styleClass="invoice-phone" text="SĐT: 0398765432" />
-                                    </VBox>
-                                    <Region HBox.hgrow="ALWAYS" />
-                                </HBox>
-                                <HBox alignment="CENTER" spacing="15" styleClass="invoice-card">
-                                    <ImageView fitHeight="60" fitWidth="100" preserveRatio="true">
-                                        <image>
-                                            <Image url="@../IMG/ban1.png" />
-                                        </image>
-                                    </ImageView>
-                                    <VBox>
-                                        <Label styleClass="invoice-id" text="HD1210820250002" />
-                                        <AnchorPane prefHeight="10.0" prefWidth="200.0" />
-                                        <Label styleClass="invoice-phone" text="SĐT: 0398765432" />
-                                    </VBox>
-                                    <Region HBox.hgrow="ALWAYS" />
-                                </HBox>
-                                <HBox alignment="CENTER" spacing="15" styleClass="invoice-card">
-                                    <ImageView fitHeight="60" fitWidth="100" preserveRatio="true">
-                                        <image>
-                                            <Image url="@../IMG/ban1.png" />
-                                        </image>
-                                    </ImageView>
-                                    <VBox>
-                                        <Label styleClass="invoice-id" text="HD1210820250002" />
-                                        <AnchorPane prefHeight="10.0" prefWidth="200.0" />
-                                        <Label styleClass="invoice-phone" text="SĐT: 0398765432" />
-                                    </VBox>
-                                    <Region HBox.hgrow="ALWAYS" />
-                                </HBox>
-                                <HBox alignment="CENTER" spacing="15" styleClass="invoice-card">
-                                    <ImageView fitHeight="60" fitWidth="100" preserveRatio="true">
-                                        <image>
-                                            <Image url="@../IMG/ban1.png" />
-                                        </image>
-                                    </ImageView>
-                                    <VBox>
-                                        <Label styleClass="invoice-id" text="HD1210820250002" />
-                                        <AnchorPane prefHeight="10.0" prefWidth="200.0" />
-                                        <Label styleClass="invoice-phone" text="SĐT: 0398765432" />
-                                    </VBox>
-                                    <Region HBox.hgrow="ALWAYS" />
-                                </HBox>
-                                <HBox alignment="CENTER" spacing="15" styleClass="invoice-card">
-                                    <ImageView fitHeight="60" fitWidth="100" preserveRatio="true">
-                                        <image>
-                                            <Image url="@../IMG/ban1.png" />
-                                        </image>
-                                    </ImageView>
-                                    <VBox>
-                                        <Label styleClass="invoice-id" text="HD1210820250002" />
-                                        <AnchorPane prefHeight="10.0" prefWidth="200.0" />
-                                        <Label styleClass="invoice-phone" text="SĐT: 0398765432" />
-                                    </VBox>
-                                    <Region HBox.hgrow="ALWAYS" />
-                                </HBox>
-                                <HBox alignment="CENTER" spacing="15" styleClass="invoice-card">
-                                    <ImageView fitHeight="60" fitWidth="100" preserveRatio="true">
-                                        <image>
-                                            <Image url="@../IMG/ban1.png" />
-                                        </image>
-                                    </ImageView>
-                                    <VBox>
-                                        <Label styleClass="invoice-id" text="HD1210820250002" />
-                                        <AnchorPane prefHeight="10.0" prefWidth="200.0" />
-                                        <Label styleClass="invoice-phone" text="SĐT: 0398765432" />
-                                    </VBox>
-                                    <Region HBox.hgrow="ALWAYS" />
-                                </HBox>
-                                <HBox alignment="CENTER" spacing="15" styleClass="invoice-card">
-                                    <ImageView fitHeight="60" fitWidth="100" preserveRatio="true">
-                                        <image>
-                                            <Image url="@../IMG/ban1.png" />
-                                        </image>
-                                    </ImageView>
-                                    <VBox>
-                                        <Label styleClass="invoice-id" text="HD1210820250002" />
-                                        <AnchorPane prefHeight="10.0" prefWidth="200.0" />
-                                        <Label styleClass="invoice-phone" text="SĐT: 0398765432" />
-                                    </VBox>
-                                    <Region HBox.hgrow="ALWAYS" />
-                                </HBox>
-                            </VBox>
-                        </content>
-                    </ScrollPane>
-                </children>
-            </VBox>
         </VBox>
 
     </center>
@@ -346,7 +341,7 @@
             </VBox>
 
             <!-- Tìm kiếm món ăn -->
-            <VBox spacing="10" styleClass="search-section">
+            <VBox spacing="10" styleClass="order-section">
 
                 <HBox alignment="CENTER_LEFT" spacing="10" styleClass="search-bar">
                     <TextField prefHeight="32.0" prefWidth="142.0" promptText="Tìm món ăn" styleClass="search-field" HBox.hgrow="ALWAYS" />
@@ -354,7 +349,7 @@
                 </HBox>
 
                 <!-- Danh sách món ăn -->
-                <ScrollPane fitToWidth="true" prefHeight="200" styleClass="food-scroll">
+                <ScrollPane fitToWidth="true" prefHeight="200.0" prefWidth="393.0" styleClass="food-scroll">
                     <FlowPane fx:id="foodList" alignment="TOP_CENTER" hgap="15" prefWrapLength="450" style="-fx-background-color: white;" vgap="15">
                         <!-- Thẻ món 1 -->
                         <VBox alignment="CENTER" prefHeight="80" prefWidth="80" spacing="5" styleClass="food-card">
