--- a/src/main/resources/FXML/sidebar_NV.fxml
+++ b/src/main/resources/FXML/sidebar_NV.fxml
@@ -12,11 +12,11 @@
 <?import javafx.scene.shape.Circle?>
 
 <BorderPane prefWidth="320" styleClass="sidebar" stylesheets="@../CSS/sidebar.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.controllers.SidebarController_NV">
-    
+
+    <!-- ================= PHẦN TRÊN (Avatar + Tên NV) ================= -->
     <top>
         <VBox prefHeight="167.0" prefWidth="320.0" spacing="10">
-            <!-- Avatar -->
-            <HBox alignment="CENTER" prefWidth="Infinity" spacing="15" styleClass="avatar_section">
+            <HBox alignment="CENTER" spacing="15" styleClass="avatar_section">
                 <children>
                     <StackPane alignment="CENTER">
                         <Circle fill="#f0f0f0" radius="57" stroke="#cccccc" strokeWidth="2" />
@@ -31,73 +31,79 @@
                         </Circle>
                     </StackPane>
                     <VBox alignment="CENTER_LEFT" spacing="5">
-                        <children>
-                            <Label styleClass="username" text="Đỗ Minh Quân" />
-                            <Label styleClass="role" text="Quản Lí" />
-                        </children>
+                        <Label styleClass="username" text="Đỗ Minh Quân" />
+                        <Label styleClass="role" text="Quản Lí" />
                     </VBox>
                 </children>
             </HBox>
         </VBox>
     </top>
 
-
-    <!-- Phần menu chính -->
+    <!-- ================= PHẦN MENU ================= -->
     <center>
         <VBox fx:id="menuContainer" alignment="TOP_CENTER" spacing="8">
-            <Button styleClass="menu-item" text="  ⚙  DASHBOARD" />
-            <Button fx:id="btnQuanLiDatBan" onAction="#toggleSubMenu" styleClass="menu-item" text="  ⚙  QUẢN LÍ ĐẶT BÀN" />
 
-            <!-- Submenu -->
-            <VBox fx:id="subMenuDatBan" alignment="CENTER" managed="false" prefHeight="190.0" prefWidth="274.0" spacing="5" visible="false">
-                <Button prefWidth="327.0" styleClass="sub-btn" text="Đặt Bàn">
-               <graphic>
-                  <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../IMG/icon/bill.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
-                <Button styleClass="sub-btn" text="Check In">
-               <graphic>
-                  <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../IMG/icon/checkmark.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
-                <Button styleClass="sub-btn" text="Check Out">
-               <graphic>
-                  <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../IMG/icon/checkout.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
-                <Button styleClass="sub-btn" text="Cập Nhật Đơn Bàn">
-               <graphic>
-                  <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../IMG/icon/chair.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
+            <!-- DASHBOARD -->
+            <Button fx:id="btnDashboard" onAction="#handleMenuAction" styleClass="menu-item" text="  🏠  DASHBOARD" />
+
+            <!-- QUẢN LÍ ĐẶT BÀN -->
+            <Button fx:id="btnQuanLiDatBan" onAction="#toggleSubMenu" styleClass="menu-item" text="  🍽  QUẢN LÍ ĐẶT BÀN" />
+
+            <!-- SUBMENU: CÁC CHỨC NĂNG CON -->
+            <VBox fx:id="subMenuDatBan" alignment="CENTER" managed="false" prefWidth="274.0" spacing="5" visible="false">
+
+                <Button fx:id="btnDatBan" onAction="#handleMenuAction" styleClass="sub-btn" text="Đặt Bàn">
+                    <graphic>
+                        <ImageView fitHeight="20" fitWidth="20" preserveRatio="true">
+                            <image>
+                                <Image url="@../IMG/icon/bill.png" />
+                            </image>
+                        </ImageView>
+                    </graphic>
+                </Button>
+
+                <Button fx:id="btnCheckIn" onAction="#handleMenuAction" styleClass="sub-btn" text="Check In">
+                    <graphic>
+                        <ImageView fitHeight="20" fitWidth="20" preserveRatio="true">
+                            <image>
+                                <Image url="@../IMG/icon/checkmark.png" />
+                            </image>
+                        </ImageView>
+                    </graphic>
+                </Button>
+
+                <Button fx:id="btnCheckOut" onAction="#handleMenuAction" styleClass="sub-btn" text="Check Out">
+                    <graphic>
+                        <ImageView fitHeight="20" fitWidth="20" preserveRatio="true">
+                            <image>
+                                <Image url="@../IMG/icon/checkout.png" />
+                            </image>
+                        </ImageView>
+                    </graphic>
+                </Button>
+
+                <Button fx:id="btnCapNhatDonBan" onAction="#handleMenuAction" styleClass="sub-btn" text="Cập Nhật Đơn Bàn">
+                    <graphic>
+                        <ImageView fitHeight="20" fitWidth="20" preserveRatio="true">
+                            <image>
+                                <Image url="@../IMG/icon/chair.png" />
+                            </image>
+                        </ImageView>
+                    </graphic>
+                </Button>
             </VBox>
 
-            <Button styleClass="menu-item" text="  ⚙  QUẢN LÍ THÀNH VIÊN" />
-            <Button styleClass="menu-item" text="  ⚙  TRA CỨU" />
-            <Button styleClass="menu-item" text="  ⚙  HỖ TRỢ" />
+            <!-- CÁC MỤC KHÁC -->
+            <Button fx:id="btnQuanLiThanhVien" onAction="#handleMenuAction" styleClass="menu-item" text="  👥  QUẢN LÍ THÀNH VIÊN" />
+            <Button fx:id="btnTraCuu" onAction="#handleMenuAction" styleClass="menu-item" text="  🔍  TRA CỨU HÓA ĐƠN" />
+            <Button fx:id="btnHoTro" onAction="#handleMenuAction" styleClass="menu-item" text="  💬  HỖ TRỢ" />
         </VBox>
     </center>
 
-    <!-- Nút cố định dưới cùng -->
+
     <bottom>
         <VBox alignment="CENTER" prefHeight="80.0" prefWidth="276.0" style="-fx-padding: 15 0 20 0;">
-            <Button prefWidth="185" styleClass="logout-btn" text="Kết Ca" />
+            <Button fx:id="btnKetCa" onAction="#handleMenuAction" prefWidth="185" styleClass="logout-btn" text="Kết Ca" />
         </VBox>
     </bottom>
 
